[gd_scene load_steps=11 format=3 uid="uid://byx4drgxr436t"]

[ext_resource type="Texture2D" uid="uid://cj1d6k5rrlipt" path="res://Assets/UI_elements/Main/Background.svg" id="1_m02ho"]
[ext_resource type="Script" path="res://Scripts/SplashScreen.gd" id="1_wj42d"]
[ext_resource type="Shader" path="res://Assets/UI_elements/Shader/blur.gdshader" id="2_k6ima"]
[ext_resource type="Texture2D" uid="uid://b0x5rjxki7vfq" path="res://Assets/UI_elements/Main/Shadow.svg" id="2_pdpcw"]
[ext_resource type="Texture2D" uid="uid://shsgopqgauvc" path="res://Assets/UI_elements/Info/play.svg" id="3_24yuy"]
[ext_resource type="Texture2D" uid="uid://d2ssmajc2tfra" path="res://Assets/UI_elements/Info/credits.svg" id="4_ktnio"]
[ext_resource type="Texture2D" uid="uid://7icuvns0niwq" path="res://Assets/UI_elements/Info/play_pressed.svg" id="5_ow5vt"]
[ext_resource type="Texture2D" uid="uid://c1gu1d6d0e30h" path="res://Assets/UI_elements/Info/play_hover.svg" id="6_3f5wr"]
[ext_resource type="PackedScene" uid="uid://biyh28ioiicg1" path="res://Scenes/Credits.tscn" id="8_b57nr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_exksx"]
shader = ExtResource("2_k6ima")
shader_parameter/blur_amount = 0.0
shader_parameter/sigma = 4.0

[node name="Info" type="Node2D"]
script = ExtResource("1_wj42d")

[node name="Container" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_exksx")
offset_right = 1920.0
offset_bottom = 1080.0

[node name="SubViewport" type="SubViewport" parent="Container"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="SplashArt" type="Sprite2D" parent="Container/SubViewport"]
position = Vector2(960, 541)
scale = Vector2(1, 2.06489)
texture = ExtResource("1_m02ho")

[node name="Shadow" type="Sprite2D" parent="Container/SubViewport"]
position = Vector2(960, 1277.5)
scale = Vector2(1, 0.892202)
texture = ExtResource("2_pdpcw")

[node name="Shadow2" type="Sprite2D" parent="Container/SubViewport"]
position = Vector2(960, -140)
scale = Vector2(1, 0.642202)
texture = ExtResource("2_pdpcw")
flip_v = true

[node name="Play" type="TextureButton" parent="Container/SubViewport"]
offset_left = 880.0
offset_top = 1216.0
offset_right = 1040.0
offset_bottom = 1376.0
pivot_offset = Vector2(80, 80)
texture_normal = ExtResource("3_24yuy")
texture_pressed = ExtResource("5_ow5vt")
texture_hover = ExtResource("6_3f5wr")
ignore_texture_size = true
stretch_mode = 5

[node name="Credits" type="TextureButton" parent="Container/SubViewport"]
offset_left = 64.0
offset_top = -256.0
offset_right = 176.0
offset_bottom = -144.0
texture_normal = ExtResource("4_ktnio")
ignore_texture_size = true
stretch_mode = 5

[node name="Version" type="Label" parent="Container/SubViewport"]
modulate = Color(1, 1, 1, 0.270588)
z_index = 10
offset_left = 8.0
offset_top = 1048.0
offset_right = 238.0
offset_bottom = 1093.0
scale = Vector2(0.6, 0.6)
text = "Incredidot v0.3"
horizontal_alignment = 1

[node name="Credits_screen" parent="." instance=ExtResource("8_b57nr")]
position = Vector2(960, 1824)

[connection signal="pressed" from="Container/SubViewport/Play" to="." method="_when_play_pressed"]
[connection signal="pressed" from="Container/SubViewport/Credits" to="." method="_when_credits_pressed"]
[connection signal="pressed" from="Credits_screen/Close" to="." method="_when_close_pressed"]

[editable path="Credits_screen"]
